Stying: fix user styles page and make static page sidebars less jumpy

--- a/static/note-styles.css
+++ b/static/note-styles.css
@@ -284,7 +284,7 @@ details {
   line-height: 2rem;
 }
 .text-block:empty {
-  cursor: pointer;
+  cursor: text;
 }
 
 .text-block:empty::before {
